编写完成serviceDetail接口
